refactor(core): Adopt Java 21+ Virtual Threads and Switch Expressions
- Replace OS threads with Virtual Threads in  for lightweight UI loops.
- Refactor playback status handling in  using switch expressions for better readability.